[package]
name = "esp-rolling-stone"
version = "0.1.0"
authors = ["Kirill Mikhailov <playfulfence@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[target.xtensa-esp32-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.2.0"
esp32-hal = { package = "esp32-hal", git = "https://github.com/esp-rs/esp-hal.git" }
xtensa-lx-rt = { version = "0.13.0", features = ["esp32"], optional = true }
esp-println = { version = "0.3.0", features = ["esp32"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.4.0", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }

[target.xtensa-esp32s2-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.2.0"
esp32s2-hal = "0.4.0"
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32s2",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.13.0", features = ["esp32s2"], optional = true }
esp-println = { version = "0.2.1", features = [ "esp32s2" ] }

[target.xtensa-esp32s3-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.2.0"
esp32s3-hal = "0.4.0"
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.12.0", features = ["esp32s3"], optional = true }
esp-println = { version = "0.2.1", features = [ "esp32s3" ] }

[target.riscv32imac-unknown-none-elf.dependencies]
esp32c3-hal = { package = "esp32c3-hal", git = "https://github.com/esp-rs/esp-hal.git" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
riscv-rt = { version = "0.8", optional = true }
esp-println = { version = "0.2.1", features = [ "esp32c3" ] }


[dependencies]
max7219 = "0.3.1"
esp-alloc = { version = "0.1.0", features = ["oom-handler"] }
esp-max7219-nostd = { version = "0.1.0", git = "https://github.com/playfulFence/esp-max7219-nostd" }


[features]
default = [ "rt", "eh1" ]
rt = ["xtensa-lx-rt"] # for esp32 and esp32s2 chips
# rt = ["riscv-rt"] # for esp32c3 chip
# eh1 = []
eh1 = ["esp32-hal/eh1"]
# eh1 = ["esp32s2-hal/eh1"]
# eh1 = ["esp32c3-hal/eh1"]


