[package]
name = "esp-rolling-stone"
version = "0.1.0"
authors = ["Kirill Mikhailov <playfulfence@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"


[target.xtensa-esp32-none-elf.dependencies]
esp32-hal = { version = "0.12.0", optional = true, features = [ "rt" ] }
esp-println = { version = "0.5.0", features = ["esp32"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.7.0", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }
esp-max7219-nostd = {path = "../esp-max7219-nostd", features = ["esp32"] }

[target.xtensa-esp32s2-none-elf.dependencies]
esp32s2-hal = { version = "0.9.0", optional = true, features = [ "rt" ] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.7.0", features = [
    "esp32s2",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = [ "esp32s2" ] }
esp-max7219-nostd = { path = "../esp-max7219-nostd", features = ["esp32s2"]}

[target.xtensa-esp32s3-none-elf.dependencies]
esp32s3-hal = { version = "0.9.0", optional = true, features = [ "rt" ] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.7.0",  features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = [ "esp32s3" ] }
esp-max7219-nostd = {path = "../esp-max7219-nostd", features = ["esp32s3"]}

[target.riscv32imc-unknown-none-elf.dependencies]
esp32c3-hal = { version = "0.9.0", optional = true }
esp-println = { version = "0.5.0", features = ["esp32c3"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.7.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
esp-max7219-nostd = { path = "../esp-max7219-nostd", features = ["esp32c3"]}

[dependencies]
max7219 = "0.3.1"
embedded-hal = "0.2.7"
esp-alloc = "0.3.0"


[features]
default = ["eh1" ]
# eh1 = ["esp32s3"]
eh1 = ["esp32-hal/eh1", "esp32"]
# eh1 = ["esp32s2-hal/eh1", "esp32s2"]
# eh1 = ["esp32c3-hal/eh1", "esp32c3"]

esp32 = []
esp32s2 = []
esp32s3 = []
esp32c3 = []


